--- a/sass/components/_components-header.scss
+++ b/sass/components/_components-header.scss
@@ -1,25 +1,48 @@
 /* Отступы лого */
 .logo-font {
-  margin-top: 24px;
-  margin-bottom: 25px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  margin-left: 15px;
+
+  @media screen and (min-width: 481px) {
+    margin-top: 26px;
+    margin-bottom: 26px;
+    margin-left: 15px;
+  }
+
+  @media screen and (min-width: 769px) {
+    margin-top: 24px;
+    margin-bottom: 25px;
+  }
 }
 /* Обнуление отступа <p>-лого  */
 .logo-position {
   margin: 0;
 }
 
-// /* Навигвция правый отступ контакты */
+// /* Навигвция правый отступ контакты -- Пример CSS */
 // .nav-contacts > li:first-child {
 //   margin-right: 30px;
 // }
 
 /* Отступы Навигация контакты */
 .nav-contacts {
-  margin-left: auto;
-  padding: 0;
+  display: none;
 
-  & > li:first-child {
-    margin-right: 30px;
+  @media screen and (min-width: 481px) {
+    margin-top: 21px;
+    margin-bottom: 21px;
+    margin-left: auto;
+    padding: 0;
+  }
+
+  @media screen and (min-width: 769px) {
+    margin-left: auto;
+    padding: 0;
+
+    & > li:first-child {
+      margin-right: 30px;
+    }
   }
 }
 
@@ -34,7 +57,16 @@
 /* Свойства блока хедер */
 .header-menu,
 .nav-contacts {
-  display: flex;
+  @media screen and (min-width: 481px) {
+    display: flex;
+    // flex-direction: column;
+  }
+}
+
+.nav-contacts {
+  @media screen and (min-width: 481px) and (max-width: 769px) {
+    flex-direction: column;
+  }
 }
 
 /* Отступы меню навигации */
