--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -203,9 +203,18 @@ body {
 }
 
 /* Отступы меню навигации */
-.header-menu {
-  margin-left: 85px;
-  padding: 0;
+@media screen and (min-width: 481px) {
+  .header-menu {
+    margin-left: 81px;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .header-menu {
+    margin-left: 85px;
+    padding: 0;
+  }
 }
 
 .nav-list {
