--- a/sass/components/_components-hero.scss
+++ b/sass/components/_components-hero.scss
@@ -1,17 +1,49 @@
 /* ==========================Стили для  секции Герой=========================== */
 
 .hero {
-  max-width: 1600px;
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
 
-  /* Стили заголовка Героя */
-  &-title {
-    margin: 0 0 30px;
-    color: $white-bg-color;
-    font-weight: 700;
-    font-size: 44px;
-    line-height: 1.4;
-    text-align: center;
-    letter-spacing: 0.06em;
+    /* Стили заголовка Героя */
+    &-title {
+      margin: 0 0 30px;
+      color: $white-bg-color;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.6;
+      text-align: center;
+      letter-spacing: 0.06em;
+    }
+  }
+
+  @media screen and (min-width: 481px) {
+    max-width: 768px;
+
+    /* Стили заголовка Героя */
+    &-title {
+      margin: 0 0 30px;
+      color: $white-bg-color;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 1.6;
+      text-align: center;
+      letter-spacing: 0.06em;
+    }
+  }
+
+  @media screen and (min-width: 769px) {
+    max-width: 1600px;
+
+    /* Стили заголовка Героя */
+    &-title {
+      margin: 0 0 30px;
+      color: $white-bg-color;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.4;
+      text-align: center;
+      letter-spacing: 0.06em;
+    }
   }
 }
 
