--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -28,8 +28,8 @@ ul {
 
 body {
   margin: 0;
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
   background-color: $white-bg-color;
   color: $primary-text-color;
   font-family: Roboto, sans-serif;
