--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -38,7 +38,7 @@ body {
 
 /* Общие стили контейнера */
 .container {
-  // width: 450px;
+  width: 450px;
   margin-left: auto;
   margin-right: auto;
 
