--- a/sass/components/_components-hero.scss
+++ b/sass/components/_components-hero.scss
@@ -12,7 +12,7 @@
       color: $white-bg-color;
       font-weight: 900;
       font-size: 26px;
-      line-height: 1.6;
+      line-height: 1.61;
       text-align: center;
       letter-spacing: 0.06em;
     }
@@ -76,13 +76,13 @@
   }
 
   @media screen and (min-width: 481px) {
-    max-width: 768px;
+    width: 768px;
     padding-bottom: 118px;
     padding-top: 118px;
   }
 
   @media screen and (min-width: 769px) {
-    max-width: 1600px;
+    width: 1600px;
     padding-bottom: 200px;
     padding-top: 200px;
   }
