--- a/css/main.css
+++ b/css/main.css
@@ -829,15 +829,28 @@ textarea {
 }
 
 /*=============================== Стиль секции Чем мы занимаемся================= */
+/* Верхний падинг для всей секции */
+.whatWeDo {
+  display: none;
+}
+
+@media screen and (min-width: 769px) {
+  .whatWeDo {
+    display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 /* Стили заголовка ЧМЗ */
 .whatWeDo .logo {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  font-weight: 700;
+  text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
-  text-align: center;
 }
 
 /* Стили текста видов работ ЧМЗ  и цвет бэкграунда*/
@@ -879,12 +892,6 @@ textarea {
   margin-right: 30px;
 }
 
-/* Верхний падинг для всей секции */
-.whatWeDo {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 /* =============================Стили секции Наша команда=========================== */
 /* Отступы всей секци Наша команда */
 .team {
@@ -895,10 +902,7 @@ textarea {
 
 /* Стили Наша команда заголовок */
 .team-title {
-  font-size: 36px;
-  line-height: 1.17;
   margin-top: 0;
-  margin-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -906,6 +910,22 @@ textarea {
       -ms-flex-pack: center;
           justify-content: center;
   letter-spacing: 0.03em;
+}
+
+@media screen {
+  .team-title {
+    font-size: 28px;
+    line-height: 1.18;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .team-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .our-team .logo {
