--- a/css/main.css
+++ b/css/main.css
@@ -895,9 +895,22 @@ textarea {
 /* =============================Стили секции Наша команда=========================== */
 /* Отступы всей секци Наша команда */
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: #f5f4fa;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .team {
+    background-color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 /* Стили Наша команда заголовок */
@@ -951,15 +964,57 @@ textarea {
   text-align: center;
 }
 
+@media screen and (max-width: 480px) {
+  .our-team {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .our-team {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 /* Отступы списка членов команды */
 .team-list {
   display: inline-block;
-  width: 274px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   /* Отступы имен членов команды */
   /* Отступы от фото команды */
+}
+
+@media screen and (max-width: 480px) {
+  .team-list {
+    width: 450px;
+  }
+  .team-list:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .team-list {
+    width: 354px;
+  }
+  .team-list:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .team-list {
+    width: 270px;
+  }
+  .team-list:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team-list .logo {
@@ -998,11 +1053,6 @@ textarea {
 
 .our-team-links > li:not(:last-child) {
   margin-right: 10px;
-}
-
-/* Правый марджин нашей команды */
-.team-list:not(:last-child) {
-  margin-right: 30px;
 }
 
 /* Стили ссылок на соцсети + SVG */
