--- a/sass/components/_components-our-team.scss
+++ b/sass/components/_components-our-team.scss
@@ -60,7 +60,7 @@
     flex-direction: column;
   }
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: 481px) and (max-width: 768px) {
     flex-wrap: wrap;
   }
 }
@@ -79,8 +79,13 @@
     }
   }
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: 481px) and (max-width: 768px) {
     width: 354px;
+
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+
     &:nth-child(2n + 1) {
       margin-right: 30px;
     }
