--- a/css/main.css
+++ b/css/main.css
@@ -1091,33 +1091,27 @@ textarea {
 /* Пример - было в отдельных классах - внес внутрь через & - Hover и Focus для иконок соцсетей */
 /* ============================Стили секции Постоянные клиенты====================== */
 /* Флекс бокс заголовка  */
-.clientsTitle-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1170px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 /* Флекс бокс списка компаний */
-.clients-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 /* Отступы заголовка Постоянные клиенты */
 .clients .logo {
-  font-size: 36px;
-  line-height: 1.17;
-  margin: 0 0 50px;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .clients .logo {
+    font-size: 28px;
+    line-height: 1.18;
+    margin: 0 0 30px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .clients .logo {
+    font-size: 36px;
+    line-height: 1.17;
+    margin: 0 0 50px;
+  }
 }
 
 /* Стили списка пост. клиенты */
