--- a/sass/components/_components-clients.scss
+++ b/sass/components/_components-clients.scss
@@ -37,23 +37,49 @@
   text-align: center;
   display: flex;
   justify-content: space-between;
+
+  /* Правый отступ списка компаний */
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  @media screen and(max-width:
+   480px) {
+    flex-wrap: wrap;
+  }
 }
 
 /* Стили списка li */
 .clients-list {
-  width: 170px;
+  width: 210px;
   height: 90px;
-}
 
-/* Стили ссылки на компании Пост. клиентов */
-.clients-link {
-  display: inline-block;
-  border: 1px solid #afb1b8;
-  border-radius: 5px;
-  margin: 0;
-  padding: 0;
-  width: 170px;
-  height: 90px;
+  /* Нижний отступ списка компаний у 4х первых элементов Li - Mobile */
+  @media screen and(max-width: 480px) {
+    &:nth-child(-n + 4) {
+      margin-bottom: 30px;
+    }
+
+    @media screen and(min-width: 769px) {
+      width: 170px;
+      height: 90px;
+    }
+  }
+
+  /* Стили ссылки на компании Пост. клиентов */
+  .clients-link {
+    display: inline-block;
+    border: 1px solid #afb1b8;
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    width: 210px;
+    height: 90px;
+  }
+
+  @media screen and(min-width: 769px) {
+    width: 170px;
+  }
 
   transition-property: border;
   transition-duration: 250ms;
@@ -65,11 +91,6 @@
     border: 1px solid $accent-color-blue;
   }
 }
-// /* Размеры ссылок клиентов */
-// .clients-link {
-//   width: 170px;
-//   height: 90px;
-// }
 
 // /* Ховер на ссылку Клиентов */
 // .clients-link:hover,
@@ -94,11 +115,6 @@
 // .icon-client:hover {
 //   fill: var(--accent-color-blue);
 // }
-
-/* Правый отступ списка компаний */
-.clients-list:not(:last-child) {
-  margin-right: 30px;
-}
 
 /* Отсупы всей секции */
 .clients {
