--- a/sass/components/_components-clients.scss
+++ b/sass/components/_components-clients.scss
@@ -118,6 +118,11 @@
 
 /* Отсупы всей секции */
 .clients {
-  padding-top: 120px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 769px) {
+    padding-top: 120px;
+    padding-bottom: 94px;
+  }
 }
