--- a/css/main.css
+++ b/css/main.css
@@ -1093,8 +1093,6 @@ textarea {
 
 /* Пример - было в отдельных классах - внес внутрь через & - Hover и Focus для иконок соцсетей */
 /* ============================Стили секции Постоянные клиенты====================== */
-/* Флекс бокс заголовка  */
-/* Флекс бокс списка компаний */
 /* Отступы заголовка Постоянные клиенты */
 .clients .logo {
   letter-spacing: 0.03em;
@@ -1136,7 +1134,7 @@ textarea {
   margin-right: 30px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .compani-list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1145,10 +1143,42 @@ textarea {
 
 /* Стили списка li */
 .clients-list {
-  width: 210px;
   height: 90px;
   /* Нижний отступ списка компаний у 4х первых элементов Li - Mobile */
-  /* Стили ссылки на компании Пост. клиентов */
+}
+
+@media screen and (max-width: 480px) {
+  .clients-list {
+    width: 210px;
+  }
+  .clients-list:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .clients-list {
+    width: 226px;
+  }
+  .clients-list:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .clients-list {
+    width: 170px;
+  }
+}
+
+/* Стили ссылки на компании Пост. клиентов */
+.clients-link {
+  display: inline-block;
+  border: 1px solid #afb1b8;
+  border-radius: 5px;
+  margin: 0;
+  padding: 0;
+  height: 90px;
   -webkit-transition-property: border;
   transition-property: border;
   -webkit-transition-duration: 250ms;
@@ -1159,35 +1189,24 @@ textarea {
 }
 
 @media screen and (max-width: 480px) {
-  .clients-list:nth-child(-n + 4) {
-    margin-bottom: 30px;
+  .clients-link {
+    width: 210px;
   }
 }
 
-@media screen and (max-width: 480px) and (min-width: 769px) {
-  .clients-list {
-    width: 170px;
-    height: 90px;
+@media screen and (min-width: 481px) {
+  .clients-link {
+    width: 226px;
   }
-}
-
-.clients-list .clients-link {
-  display: inline-block;
-  border: 1px solid #afb1b8;
-  border-radius: 5px;
-  margin: 0;
-  padding: 0;
-  width: 210px;
-  height: 90px;
 }
 
 @media screen and (min-width: 769px) {
-  .clients-list {
+  .clients-link {
     width: 170px;
   }
 }
 
-.clients-list:hover, .clients-list:focus {
+.clients-link:hover, .clients-link:focus {
   border: 1px solid #2196f3;
 }
 
