Add ВСЕ адаптивные стили секции Пост. Клиенты

--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ textarea {
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
   .clients-list {
     width: 226px;
   }
