--- a/sass/components/_components-clients.scss
+++ b/sass/components/_components-clients.scss
@@ -50,7 +50,7 @@
     }
   }
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: 481px) and (max-width: 768px) {
     width: 226px;
 
     &:nth-child(-n + 3) {
