--- a/sass/components/_components-footer.scss
+++ b/sass/components/_components-footer.scss
@@ -1,10 +1,33 @@
 /* ==================================Стили Футера ============================== */
+
+// Стили секции Футер
 footer {
-  height: 253px;
+  // height: 253px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
+
+// Стили Лого футера
 .logo-font-footer {
   display: inline-block;
-  font-size: 22px;
+  @media screen and (max-width: 480px) {
+    font-size: 24px;
+    line-height: 1.17;
+    margin-bottom: 20px;
+  }
+
+  @media screen and(min-width: 769px) {
+    font-size: 26px;
+  }
+}
+
+.footer-addressBox {
+  @media screen and (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 60px;
+  }
 }
 
 /* ===============Заголовки белым цветом */
@@ -22,10 +45,9 @@ footer {
   text-decoration: none;
   font-style: normal;
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   display: inline-block;
-  margin-top: 10px;
 }
 
 .contacts-footer {
@@ -40,21 +62,41 @@ footer {
 
 /* Отступы спика контактов футера UL */
 .footer-address-ul {
-  padding: 0;
-  min-width: 231px;
+  @media screen and (max-width: 480px) {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 769px) {
+    padding: 0;
+    min-width: 231px;
+  }
 }
 
-.footer-address-list:not(:first-child) {
-  margin-top: 9px;
+.footer-address-list:not(:last-child) {
+  margin-bottom: 8px;
+
+  @media screen and (min-width: 769px) {
+    margin-top: 9px;
+  }
 }
 
 /* Флекс бокс всего футера */
 .footer-flexBox {
   display: flex;
-  align-items: baseline;
-  padding-bottom: 28px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  margin-bottom: 18px;
+
+  @media screen and (max-width: 480px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 769px) {
+    align-items: baseline;
+    padding-bottom: 28px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    margin-bottom: 18px;
+  }
 }
 /* Флекс бокс блока ссылок и заголовка=======Блок ссылок===== */
 .footerLinks-box {
