--- a/sass/components/_components-footer.scss
+++ b/sass/components/_components-footer.scss
@@ -26,7 +26,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 60px;
+    margin-bottom: 60px;
   }
 }
 
@@ -102,9 +102,19 @@ footer {
 .footerLinks-box {
   display: flex;
   flex-direction: column;
-  margin-left: 69px;
-  width: 207px;
-  padding-top: 56px;
+  align-items: center;
+
+  @media screen and (max-width: 480px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 769px) {
+    display: flex;
+    flex-direction: column;
+    margin-left: 69px;
+    width: 207px;
+    padding-top: 56px;
+  }
 }
 /* Флекс бокс тайтл */
 .footerTitle-box {
@@ -119,12 +129,21 @@ footer {
 
 /* Стили заголовков футера */
 .footer-title {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
   margin-top: 0;
-  margin-bottom: 21px;
-  display: block;
+
+  @media screen and (max-width: 480px) {
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  @media screen and (min-width: 769px) {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    margin-bottom: 21px;
+    display: block;
+  }
 }
 /* Лого футера -  отступы*/
 .logo-font-footer > p {
